- fix broken image imports - ensure tribes/explore tribes are ordered by follower count - remove weird double border on activity - fix up tribe plans breaking on half screen

--- a/app/assets/v2/css/activity_stream.css
+++ b/app/assets/v2/css/activity_stream.css
@@ -201,12 +201,6 @@ a .sup {
   min-width: 7rem;
 }
 
-.activity_stream .new_bounty {
-  border-top: 3px solid #3e00ff;
-  border-bottom: 3px solid #3e00ff;
-}
-
-
 textarea.enter-activity-comment {
   height: 3em;
   transition: .1s all linear;
